--- a/OrangeDot6_files/visuals/visuals-localities.Rmd
+++ b/OrangeDot6_files/visuals/visuals-localities.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Orange Dot 6.0 - Locality Profiles"
-date: "2024-09-18"
 output: html_document
+# output: word_document
+# output:
+#   bookdown::word_document2
 ---
 ```{css, echo=FALSE}
 .main-container.container-fluid {
@@ -15,6 +17,15 @@ output: html_document
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
+
+knitr::opts_template$set(fullwidth_bar = list(
+  fig.width = 6, fig.height = 5,
+  fig.retina = 2, out.width = '100%'
+),
+fullwidth_map = list(
+  fig.width=9, fig.height=9,
+  fig.retina = 2, out.width = '100%'
+))
 
 # Load packages ----
 library(tidyverse)
@@ -75,7 +86,8 @@ selfsuff_mean_annual <- selfsuff_county %>%
 selfsuff_table <- selfsuff_mean_monthly %>% 
   left_join(selfsuff_mean_annual) %>% 
   mutate(name = str_remove(name, "_mean")) %>% 
-  mutate(name = str_to_title(str_replace_all(name, "_", " ")))
+  mutate(name = str_to_title(str_replace_all(name, "_", " ")),
+         county = str_to_title(county))
 
 ssw_table_title <- "Average Expenses and Self-Sufficiency Wages for Families in "
 
@@ -100,9 +112,18 @@ fam_ssw_dat <- fam_ssw %>%
 
 fam_ssw_dat <- fam_ssw_dat[order(fam_ssw_dat$name),]
 
-fam_ssw_pal <- c("#b2b8be", "#3B8EA5", "#97E196")
+fam_ssw_pal <- c("#B4C8A8", "#DE8A5A", "#CA562C")
 fam_ssw_title <- "Families Earning Below and Above the Self-Sufficiency Standard"
 
+# Total Families and Total Below SSW by county ----
+fam_ssw_totals <- fam_ssw_dat %>% 
+  filter(str_detect(name, "Income below")) %>% 
+  group_by(locality, group) %>% 
+  summarise(total_families = first(total_families),
+            below_ssw_num = sum(number),
+            below_ssw_per = sum(round(value))) %>% 
+  mutate(locality = str_to_title(str_remove(locality, ", Virginia")))
+  
 # Income distribution by race/ethnicity by county ----
 faminc_race <- read_csv("../data/faminc_race_county_2022.csv") 
 
@@ -136,10 +157,17 @@ faminc_data <- faminc_race %>%
 faminc_pal <- c("#E4EAF1", "#B4C8A8", "#DE8A5A", "#CA562C")
 faminc_title <- "Distribution of Family Income"
 
+# Median family income by county ----
+med_faminc_county <- read_csv("../data/med_faminc_county_2022.csv") %>%
+  mutate(GEOID = as.character(GEOID),
+         estimate = round(estimate, 0),
+         locality = str_to_title(str_remove(locality, ", Virginia")))
+
 # Median family income by tract ----
 med_faminc_tract <- read_csv("../data/med_faminc_tract_2022.csv") %>%
   mutate(GEOID = as.character(GEOID),
-         estimate = round(estimate, -2))
+         estimate = round(estimate, -2),
+         locality = str_to_title(locality))
 
 med_faminc_tract <- med_faminc_tract %>%
   left_join(tract_geo, by = "GEOID") %>% 
@@ -152,7 +180,8 @@ max_inc <- max(med_faminc_tract$estimate, na.rm = TRUE)
 ssw_tract <- read_csv("../data/faminc_ssw_tract_2022.csv") %>%
   filter(ssw_group == "below") %>%
   mutate(GEOID = as.character(GEOID),
-         percent = round(percent,0))
+         percent = round(percent,0),
+         locality = str_to_title(locality))
 
 ssw_tract <- ssw_tract %>%
   left_join(tract_geo, by = "GEOID") %>% 
@@ -170,6 +199,135 @@ uw_sss_source <- "Data Source: The Self-Sufficiency Standard for Virginia, 2021;
 
 ## Albemarle County
 ```{r}
+# Set name
+local_name <- "Albemarle County"
+
+<<locality_summary>>
+
+```
+
+```{r locality_summary, echo=FALSE}
+# Calculate summary values ----
+# Total Families and Total Below SSW
+total_fam <- fam_ssw_totals %>%
+  filter(group == "All Families" & locality == local_name)
+
+total <- prettyNum(total_fam$total_families, big.mark=",", preserve.width="none")
+locality_name <- total_fam$locality
+below_ssw <- prettyNum(total_fam$below_ssw_num, big.mark=",", preserve.width="none")
+below_ssw_per <- percent(total_fam$below_ssw_per, scale = 1, accuracy = 1)
+
+# Black families
+black_fam <- fam_ssw_totals %>%
+  filter(group == "Black Families" & locality == local_name)
+below_ssw_black <- prettyNum(black_fam$below_ssw_num, big.mark=",", preserve.width="none")
+below_ssw_per_black <- black_fam$below_ssw_per
+
+# Hispanic families
+his_fam <- fam_ssw_totals %>%
+  filter(group == "Hispanic Families" & locality == local_name)
+below_ssw_his <- prettyNum(his_fam$below_ssw_num, big.mark=",", preserve.width="none")
+below_ssw_per_his <- his_fam$below_ssw_per
+
+# White families
+white_fam <- fam_ssw_totals %>%
+  filter(group == "White Families" & locality == local_name)
+below_ssw_white <- prettyNum(white_fam$below_ssw_num, big.mark=",", preserve.width="none")
+below_ssw_per_white <- white_fam$below_ssw_per
+
+# SSW table
+selfsuff_table_data <- selfsuff_table %>% 
+  filter(county == local_name)
+
+ssw_annual<- selfsuff_table_data %>% 
+  filter(name == "Self Sufficiency Wage")
+ssw_annual<- paste0("$", prettyNum(ssw_annual$Annual, big.mark=",", preserve.width="none"))
+
+# Median Family income
+med_faminc <- med_faminc_county %>% 
+  filter(locality == local_name)
+med_faminc<-paste0("$", prettyNum(med_faminc$estimate, big.mark=",", preserve.width="none"))
+
+med_faminc_low <- med_faminc_tract %>% 
+  filter(locality == local_name) %>% 
+  filter(estimate == min(estimate, na.rm = TRUE))
+med_faminc_low_est <- paste0("$", prettyNum(med_faminc_low$estimate, big.mark=",", preserve.width="none"))
+med_faminc_low_name <- med_faminc_low$tractnames
+
+med_faminc_high <- med_faminc_tract %>% 
+  filter(locality == local_name) %>% 
+  filter(estimate == max(estimate, na.rm = TRUE))
+med_faminc_high_est <- paste0("$", prettyNum(med_faminc_high$estimate, big.mark=",", preserve.width="none"))
+med_faminc_high_name <- med_faminc_high$tractnames
+
+# SSW by tract
+ssw_tract_high <- ssw_tract %>% 
+  filter(locality == local_name) %>% 
+  filter(percent == max(percent, na.rm = TRUE))
+ssw_tract_high_per <- unique(ssw_tract_high$percent)
+ssw_tract_high_name <- paste(ssw_tract_high$tractnames, collapse = " and ")
+
+ssw_tract_low <- ssw_tract %>% 
+  filter(locality == local_name) %>% 
+  filter(percent == min(percent, na.rm = TRUE))
+ssw_tract_low_per <- unique(ssw_tract_low$percent)
+ssw_tract_low_name <- paste(ssw_tract_low$tractnames, collapse = " and ")
+
+# Section summary texts ----
+
+section_summary_w_hisp <- paste0("
+<p>There are ", total, " families living in ", locality_name, ". Of these, ", below_ssw," (", below_ssw_per,") do not earn enough to provide for their family’s basic needs.</p>
+<p>", locality_name, " at a glance:</p>
+<ul>
+<li><p>The Self-Sufficiency Standard for an average family in ", locality_name, " is an annual income of ", ssw_annual, ". This is the income working families need to meet their basic necessities. These include: housing, child care, food, transportation, health care, miscellaneous expenses (clothing, telephone, household items), and taxes (minus federal and state tax credits).</p></li>
+
+<li><p>Approximately ", below_ssw, " families, or ", below_ssw_per, " of families, in ", locality_name, " earn below the Self-Sufficiency Standard.</p></li>
+
+<li><p>The percent of Black families earning below the Self-Sufficiency Standard is ", percent(below_ssw_per_black, scale = 1, accuracy = 1), ". The percent of Hispanic families earning below the Self-Sufficiency Standard is ", percent(below_ssw_per_his, scale = 1, accuracy = 1), ". These are ", percent(below_ssw_per_black-below_ssw_per_white, scale = 1, accuracy = 1), " and ", percent(below_ssw_per_his-below_ssw_per_white, scale = 1, accuracy = 1), " higher than the percent of white families earning below the Self-Sufficiency Standard (", percent(below_ssw_per_white, scale = 1, accuracy = 1), ").</p></li>
+
+<li><p>The median family income for ", locality_name, " is ", med_faminc, ". The tract with the lowest median family income is ", med_faminc_low_name, " at ", med_faminc_low_est, ". The tract with the highest median family income is ", med_faminc_high_name, " at ", med_faminc_high_est, ".</p></li>
+
+<li><p>The tract with the highest percent of families with income below the Self-Sufficiency Standard is ", ssw_tract_high_name, " with ", percent(ssw_tract_high_per, scale = 1, accuracy = 1), " of families. The tract with the lowest percent of families earning below the Self-Sufficiency Standard is ", ssw_tract_low_name, " with ", percent(ssw_tract_low_per, scale = 1, accuracy = 1), " of families. That is a difference of ", percent(ssw_tract_high_per-ssw_tract_low_per, scale = 1, accuracy = 1), ".</p></li>
+</ul>
+")
+
+section_summary <- paste0("
+<p>There are ", total, " families living in ", locality_name, ". Of these, ", below_ssw," (", below_ssw_per,") do not earn enough to provide for their family’s basic needs.</p>
+<p>", locality_name, " at a glance:</p>
+<ul>
+<li><p>The Self-Sufficiency Standard for an average family in ", locality_name, " is an annual income of ", ssw_annual, ". This is the income working families need to meet their basic necessities. These include: housing, child care, food, transportation, health care, miscellaneous expenses (clothing, telephone, household items), and taxes (minus federal and state tax credits).</p></li>
+
+<li><p>Approximately ", below_ssw, " families, or ", below_ssw_per, " of families, in ", locality_name, " earn below the Self-Sufficiency Standard.</p></li>
+
+<li><p>The percent of Black families earning below the Self-Sufficiency Standard is ", percent(below_ssw_per_black, scale = 1, accuracy = 1), ". This is ", percent(below_ssw_per_black-below_ssw_per_white, scale = 1, accuracy = 1), " higher than the percent of white families earning below the Self-Sufficiency Standard (", percent(below_ssw_per_white, scale = 1, accuracy = 1), ").</p></li>
+
+<li><p>The median family income for ", locality_name, " is ", med_faminc, ". The tract with the lowest median family income is ", med_faminc_low_name, " at ", med_faminc_low_est, ". The tract with the highest median family income is ", med_faminc_high_name, " at ", med_faminc_high_est, ".</p></li>
+
+<li><p>The tract with the highest percent of families with income below the Self-Sufficiency Standard is ", ssw_tract_high_name, " with ", percent(ssw_tract_high_per, scale = 1, accuracy = 1), " of families. The tract with the lowest percent of families earning below the Self-Sufficiency Standard is ", ssw_tract_low_name, " with ", percent(ssw_tract_low_per, scale = 1, accuracy = 1), " of families. That is a difference of ", percent(ssw_tract_high_per-ssw_tract_low_per, scale = 1, accuracy = 1), ".</p></li>
+</ul>
+")
+
+
+```
+
+<!-- There are `r total` families living in `r locality_name`. Of these, `r below_ssw` (`r below_ssw_per`) do not earn enough to provide for their family's basic needs. -->
+
+<!-- `r locality_name` at a glance: -->
+
+<!-- - The Self-Sufficiency Standard for an average family in `r locality_name` is an annual income of `r ssw_annual`. This is the income working families need to meet their basic necessities. These include: housing, child care, food, transportation, health care, miscellaneous expenses (clothing, telephone, household items), and taxes (minus federal and state tax credits). -->
+
+<!-- - Approximately `r below_ssw` families, or `r below_ssw_per` of families, in `r locality_name` earn below the Self-Sufficiency Standard. -->
+
+<!-- - The percent of Black families earning below the Self-Sufficiency Standard is `r percent(below_ssw_per_black, scale = 1, accuracy = 1)`. The percent of Hispanic families earning below the Self-Sufficiency Standard is `r percent(below_ssw_per_his, scale = 1, accuracy = 1)`. These are `r percent(below_ssw_per_black-below_ssw_per_white, scale = 1, accuracy = 1)` and `r percent(below_ssw_per_his-below_ssw_per_white, scale = 1, accuracy = 1)` higher than the percent of white families earning below the Self-Sufficiency Standard (`r percent(below_ssw_per_white, scale = 1, accuracy = 1)`). -->
+
+<!-- - The median family income for `r locality_name` is `r med_faminc`. The tract with the lowest median family income is `r med_faminc_low_name` at `r med_faminc_low_est`. The tract with the highest median family income is `r med_faminc_high_name` at `r med_faminc_high_est`. -->
+
+<!-- - The tract with the highest percent of families with income below the Self-Sufficiency Standard is `r ssw_tract_high_name` with `r percent(ssw_tract_high_per, scale = 1, accuracy = 1)` of families. The tract with the lowest percent of families earning below the Self-Sufficiency Standard is `r ssw_tract_low_name` with `r percent(ssw_tract_low_per, scale = 1, accuracy = 1)` of families. That is a difference of `r percent(ssw_tract_high_per-ssw_tract_low_per, scale = 1, accuracy = 1)`. -->
+
+
+`r section_summary_w_hisp`
+
+```{r ssw_table_alb, echo=FALSE}
 # County self sufficiency table ----
 selfsuff_table_alb <- selfsuff_table %>% 
   filter(county == "Albemarle County")
@@ -214,8 +372,9 @@ selfsuff_table_alb %>%
 ```
 
 
-```{r, echo = FALSE,fig.width=6, fig.height=5}
+```{r, opts.label='fullwidth_bar'}
 # Families with income below 35k, between 35k-self sufficiency wage & above ssw ----
+# Families below and above SSW
 fam_ssw_alb <- fam_ssw_dat %>% 
   filter(locality == "Albemarle County, Virginia")
 
@@ -244,39 +403,39 @@ fam_ssw_alb %>%
 ```
 
 ```{r, echo=FALSE,fig.width=7, fig.height=5}
-# Income distribution by race/ethnicity by county ----
-faminc_alb <- faminc_data %>% 
-  filter(locality == "Albemarle County, Virginia")
-
-faminc_alb %>% 
-  arrange(inc_rank) %>%
-  ggplot(aes(x = group, y = percent, group = group, fill = inc_band_group, 
-               label = text)) +
-  geom_bar(stat = "identity", color = "white") + 
-  geom_text(size = 3, position = position_stack(vjust = 0.5)) +
-  scale_fill_manual(values = faminc_pal) +
-  scale_x_discrete(name = "") +
-  scale_y_continuous(labels = label_percent(scale = 1),
-                     name = "") +
-  guides(fill = guide_legend(reverse = TRUE)) +
-  coord_flip() + 
-  labs(title = faminc_title, 
-       subtitle = unique(faminc_alb$locality_label),
-       caption = source_acs) +
-  theme_minimal() +
-  theme(legend.title=element_blank(),
-        legend.position = "top",
-        legend.location = "plot",
-        legend.justification="center",
-          panel.grid.major.x = element_blank(),
-          axis.ticks = element_blank(),
-          panel.grid.minor = element_blank(),
-          plot.title.position= "plot",
-          plot.caption.position = "plot")
+# # Income distribution by race/ethnicity by county ----
+# faminc_alb <- faminc_data %>% 
+#   filter(locality == "Albemarle County, Virginia")
+# 
+# faminc_alb %>% 
+#   arrange(inc_rank) %>%
+#   ggplot(aes(x = group, y = percent, group = group, fill = inc_band_group, 
+#                label = text)) +
+#   geom_bar(stat = "identity", color = "white") + 
+#   geom_text(size = 3, position = position_stack(vjust = 0.5)) +
+#   scale_fill_manual(values = faminc_pal) +
+#   scale_x_discrete(name = "") +
+#   scale_y_continuous(labels = label_percent(scale = 1),
+#                      name = "") +
+#   guides(fill = guide_legend(reverse = TRUE)) +
+#   coord_flip() + 
+#   labs(title = faminc_title, 
+#        subtitle = unique(faminc_alb$locality_label),
+#        caption = source_acs) +
+#   theme_minimal() +
+#   theme(legend.title=element_blank(),
+#         legend.position = "top",
+#         legend.location = "plot",
+#         legend.justification="center",
+#           panel.grid.major.x = element_blank(),
+#           axis.ticks = element_blank(),
+#           panel.grid.minor = element_blank(),
+#           plot.title.position= "plot",
+#           plot.caption.position = "plot")
 
 ```
 
-```{r, echo=FALSE, warning = FALSE, fig.width=9, fig.height=9}
+```{r, opts.label='fullwidth_map'}
 # Geospatial visualization: Albemarle ----
 alb_inc_map <- med_faminc_tract %>%
   filter(locality == "Albemarle County") %>%
@@ -299,7 +458,7 @@ alb_inc_map <- med_faminc_tract %>%
                                             )
                     )+
   labs(title = "Median Family Income by Tract",
-      subtitle = unique(faminc_alb$locality_label),
+      subtitle = unique(fam_ssw_alb$locality_label),
       caption = source_acs) +
   theme_map() +
   theme(legend.position="right")
@@ -338,7 +497,31 @@ alb_ssw_map
 ```
 
 ## Buckingham County
-```{r}
+```{r, echo=FALSE}
+# Set name
+local_name <- "Buckingham County"
+
+<<locality_summary>>
+
+```
+
+`r section_summary`
+
+<!-- There are `r total` families living in `r locality_name`. Of these, `r below_ssw` (`r below_ssw_per`) do not earn enough to provide for their family's basic needs. -->
+
+<!-- `r locality_name` at a glance: -->
+
+<!-- - The Self-Sufficiency Standard for an average family in `r locality_name` is an annual income of `r ssw_annual`. This is the income working families need to meet their basic necessities. These include: housing, child care, food, transportation, health care, miscellaneous expenses (clothing, telephone, household items), and taxes (minus federal and state tax credits). -->
+
+<!-- - Approximately `r below_ssw` families, or `r below_ssw_per` of families, in `r locality_name` earn below the Self-Sufficiency Standard. -->
+
+<!-- - The percent of Black families earning below the Self-Sufficiency Standard is `r percent(below_ssw_per_black, scale = 1, accuracy = 1)`. This is `r percent(below_ssw_per_black-below_ssw_per_white, scale = 1, accuracy = 1)` higher than the percent of white families earning below the Self-Sufficiency Standard (`r percent(below_ssw_per_white, scale = 1, accuracy = 1)`). -->
+
+<!-- - The median family income for `r locality_name` is `r med_faminc`. The tract with the lowest median family income is `r med_faminc_low_name` at `r med_faminc_low_est`. The tract with the highest median family income is `r med_faminc_high_name` at `r med_faminc_high_est`. -->
+
+<!-- - The tract with the highest percent of families with income below the Self-Sufficiency Standard is `r ssw_tract_high_name` with `r percent(ssw_tract_high_per, scale = 1, accuracy = 1)` of families. The tract with the lowest percent of families earning below the Self-Sufficiency Standard is `r ssw_tract_low_name` with `r percent(ssw_tract_low_per, scale = 1, accuracy = 1)` of families. That is a difference of `r percent(ssw_tract_high_per-ssw_tract_low_per, scale = 1, accuracy = 1)`. -->
+
+```{r ssw_table_buc}
 # County self sufficiency table ----
 selfsuff_table_buc <- selfsuff_table %>% 
   filter(county == "Buckingham County")
@@ -412,35 +595,35 @@ fam_ssw_buc %>%
 ```
 
 ```{r, echo=FALSE,fig.width=6.5, fig.height=4}
-# Income distribution by race/ethnicity by county ----
-faminc_buc <- faminc_data %>% 
-  filter(locality == "Buckingham County, Virginia" & group != "Hispanic Families")
-
-faminc_buc %>% 
-  arrange(inc_rank) %>%
-  ggplot(aes(x = group, y = percent, group = group, fill = inc_band_group, 
-               label = text)) +
-  geom_bar(stat = "identity", color = "white") + 
-  geom_text(size = 3, position = position_stack(vjust = 0.5)) +
-  scale_fill_manual(values = faminc_pal) +
-  scale_x_discrete(name = "") +
-  scale_y_continuous(labels = label_percent(scale = 1),
-                     name = "") +
-  guides(fill = guide_legend(reverse = TRUE)) +
-  coord_flip() + 
-  labs(title = faminc_title, 
-       subtitle = unique(faminc_buc$locality_label),
-       caption = source_acs) +
-  theme_minimal() +
-  theme(legend.title=element_blank(),
-        legend.position = "top",
-        legend.location = "plot",
-        legend.justification="center",
-          panel.grid.major.x = element_blank(),
-          axis.ticks = element_blank(),
-          panel.grid.minor = element_blank(),
-          plot.title.position= "plot",
-          plot.caption.position = "plot")
+# # Income distribution by race/ethnicity by county ----
+# faminc_buc <- faminc_data %>% 
+#   filter(locality == "Buckingham County, Virginia" & group != "Hispanic Families")
+# 
+# faminc_buc %>% 
+#   arrange(inc_rank) %>%
+#   ggplot(aes(x = group, y = percent, group = group, fill = inc_band_group, 
+#                label = text)) +
+#   geom_bar(stat = "identity", color = "white") + 
+#   geom_text(size = 3, position = position_stack(vjust = 0.5)) +
+#   scale_fill_manual(values = faminc_pal) +
+#   scale_x_discrete(name = "") +
+#   scale_y_continuous(labels = label_percent(scale = 1),
+#                      name = "") +
+#   guides(fill = guide_legend(reverse = TRUE)) +
+#   coord_flip() + 
+#   labs(title = faminc_title, 
+#        subtitle = unique(faminc_buc$locality_label),
+#        caption = source_acs) +
+#   theme_minimal() +
+#   theme(legend.title=element_blank(),
+#         legend.position = "top",
+#         legend.location = "plot",
+#         legend.justification="center",
+#           panel.grid.major.x = element_blank(),
+#           axis.ticks = element_blank(),
+#           panel.grid.minor = element_blank(),
+#           plot.title.position= "plot",
+#           plot.caption.position = "plot")
 
 ```
 
@@ -500,14 +683,26 @@ buc_ssw_map <- ssw_tract %>%
   theme_map()+
   theme(legend.position="right")
 
-buc_inc_map + buc_ssw_map
+buc_inc_map 
+
+buc_ssw_map
 ```
 
 ## City of Charlottesville
-```{r}
+```{r, echo=FALSE}
+# Set name
+local_name <- "Charlottesville City"
+
+<<locality_summary>>
+
+```
+
+`r section_summary_w_hisp`
+
+```{r ssw_table_cville}
 # County self sufficiency table ----
 selfsuff_table_cville <- selfsuff_table %>% 
-  filter(county == "Charlottesville city")
+  filter(county == "Charlottesville City")
 
 selfsuff_table_cville %>% 
   select(-c(county)) %>% 
@@ -578,35 +773,35 @@ fam_ssw_cville %>%
 ```
 
 ```{r, echo=FALSE,fig.width=7, fig.height=5}
-# Income distribution by race/ethnicity by county ----
-faminc_cville <- faminc_data %>% 
-  filter(locality == "Charlottesville city, Virginia")
-
-faminc_cville %>% 
-  arrange(inc_rank) %>%
-  ggplot(aes(x = group, y = percent, group = group, fill = inc_band_group, 
-               label = text)) +
-  geom_bar(stat = "identity", color = "white") + 
-  geom_text(size = 3, position = position_stack(vjust = 0.5)) +
-  scale_fill_manual(values = faminc_pal) +
-  scale_x_discrete(name = "") +
-  scale_y_continuous(labels = label_percent(scale = 1),
-                     name = "") +
-  guides(fill = guide_legend(reverse = TRUE)) +
-  coord_flip() + 
-  labs(title = faminc_title, 
-       subtitle = unique(faminc_cville$locality_label),
-       caption = source_acs) +
-  theme_minimal() +
-  theme(legend.title=element_blank(),
-        legend.position = "top",
-        legend.location = "plot",
-        legend.justification="center",
-          panel.grid.major.x = element_blank(),
-          axis.ticks = element_blank(),
-          panel.grid.minor = element_blank(),
-          plot.title.position= "plot",
-          plot.caption.position = "plot")
+# # Income distribution by race/ethnicity by county ----
+# faminc_cville <- faminc_data %>% 
+#   filter(locality == "Charlottesville city, Virginia")
+# 
+# faminc_cville %>% 
+#   arrange(inc_rank) %>%
+#   ggplot(aes(x = group, y = percent, group = group, fill = inc_band_group, 
+#                label = text)) +
+#   geom_bar(stat = "identity", color = "white") + 
+#   geom_text(size = 3, position = position_stack(vjust = 0.5)) +
+#   scale_fill_manual(values = faminc_pal) +
+#   scale_x_discrete(name = "") +
+#   scale_y_continuous(labels = label_percent(scale = 1),
+#                      name = "") +
+#   guides(fill = guide_legend(reverse = TRUE)) +
+#   coord_flip() + 
+#   labs(title = faminc_title, 
+#        subtitle = unique(faminc_cville$locality_label),
+#        caption = source_acs) +
+#   theme_minimal() +
+#   theme(legend.title=element_blank(),
+#         legend.position = "top",
+#         legend.location = "plot",
+#         legend.justification="center",
+#           panel.grid.major.x = element_blank(),
+#           axis.ticks = element_blank(),
+#           panel.grid.minor = element_blank(),
+#           plot.title.position= "plot",
+#           plot.caption.position = "plot")
 
 ```
 
@@ -614,7 +809,7 @@ faminc_cville %>%
 
 # Geospatial visualization: Charlottesville ----
 cville_inc_map <- med_faminc_tract %>%
-  filter(locality == "Charlottesville city") %>%
+  filter(locality == "Charlottesville City") %>%
   mutate(text = case_when(is.na(estimate) ~ "",
                           .default = paste0("$", prettyNum(estimate, big.mark=",", preserve.width="none")))) %>%
   ggplot() +
@@ -643,7 +838,7 @@ cville_inc_map <- med_faminc_tract %>%
 
 
 cville_ssw_map <- ssw_tract %>%
-  filter(locality == "Charlottesville city") %>%
+  filter(locality == "Charlottesville City") %>%
   filter(ssw_group == "below") %>%
   mutate(text = paste0(round(percent,0), "%")) %>%
   ggplot() +
@@ -669,11 +864,23 @@ cville_ssw_map <- ssw_tract %>%
   theme_map()+
   theme(legend.position="right")
 
-cville_inc_map + cville_ssw_map
+cville_inc_map 
+
+cville_ssw_map
 ```
 
 ## Fluvanna County
-```{r}
+```{r, echo=FALSE}
+# Set name
+local_name <- "Fluvanna County"
+
+<<locality_summary>>
+
+```
+
+`r section_summary`
+
+```{r ssw_table_flu}
 # County self sufficiency table ----
 selfsuff_table_flu <- selfsuff_table %>% 
   filter(county == "Fluvanna County")
@@ -747,35 +954,35 @@ fam_ssw_flu %>%
 ```
 
 ```{r, echo=FALSE,fig.width=6.5, fig.height=4}
-# Income distribution by race/ethnicity by county ----
-faminc_flu <- faminc_data %>% 
-  filter(locality == "Fluvanna County, Virginia" & group != "Hispanic Families")
-
-faminc_flu %>% 
-  arrange(inc_rank) %>%
-  ggplot(aes(x = group, y = percent, group = group, fill = inc_band_group, 
-               label = text)) +
-  geom_bar(stat = "identity", color = "white") + 
-  geom_text(size = 3, position = position_stack(vjust = 0.5)) +
-  scale_fill_manual(values = faminc_pal) +
-  scale_x_discrete(name = "") +
-  scale_y_continuous(labels = label_percent(scale = 1),
-                     name = "") +
-  guides(fill = guide_legend(reverse = TRUE)) +
-  coord_flip() + 
-  labs(title = faminc_title, 
-       subtitle = unique(faminc_flu$locality_label),
-       caption = source_acs) +
-  theme_minimal() +
-  theme(legend.title=element_blank(),
-        legend.position = "top",
-        legend.location = "plot",
-        legend.justification="center",
-          panel.grid.major.x = element_blank(),
-          axis.ticks = element_blank(),
-          panel.grid.minor = element_blank(),
-          plot.title.position= "plot",
-          plot.caption.position = "plot")
+# # Income distribution by race/ethnicity by county ----
+# faminc_flu <- faminc_data %>% 
+#   filter(locality == "Fluvanna County, Virginia" & group != "Hispanic Families")
+# 
+# faminc_flu %>% 
+#   arrange(inc_rank) %>%
+#   ggplot(aes(x = group, y = percent, group = group, fill = inc_band_group, 
+#                label = text)) +
+#   geom_bar(stat = "identity", color = "white") + 
+#   geom_text(size = 3, position = position_stack(vjust = 0.5)) +
+#   scale_fill_manual(values = faminc_pal) +
+#   scale_x_discrete(name = "") +
+#   scale_y_continuous(labels = label_percent(scale = 1),
+#                      name = "") +
+#   guides(fill = guide_legend(reverse = TRUE)) +
+#   coord_flip() + 
+#   labs(title = faminc_title, 
+#        subtitle = unique(faminc_flu$locality_label),
+#        caption = source_acs) +
+#   theme_minimal() +
+#   theme(legend.title=element_blank(),
+#         legend.position = "top",
+#         legend.location = "plot",
+#         legend.justification="center",
+#           panel.grid.major.x = element_blank(),
+#           axis.ticks = element_blank(),
+#           panel.grid.minor = element_blank(),
+#           plot.title.position= "plot",
+#           plot.caption.position = "plot")
 
 ```
 
@@ -834,11 +1041,23 @@ fluv_ssw_map <- ssw_tract %>%
   theme_map()+
   theme(legend.position="right")
 
-fluv_inc_map + fluv_ssw_map
+fluv_inc_map 
+
+fluv_ssw_map
 ```
 
 ## Greene County
-```{r}
+```{r, echo=FALSE}
+# Set name
+local_name <- "Greene County"
+
+<<locality_summary>>
+
+```
+
+`r section_summary`
+
+```{r ssw_table_grn}
 # County self sufficiency table ----
 selfsuff_table_grn <- selfsuff_table %>% 
   filter(county == "Greene County")
@@ -912,35 +1131,35 @@ fam_ssw_grn %>%
 ```
 
 ```{r, echo=FALSE,fig.width=6.5, fig.height=4}
-# Income distribution by race/ethnicity by county ----
-faminc_grn <- faminc_data %>% 
-  filter(locality == "Greene County, Virginia" & group != "Hispanic Families")
-
-faminc_grn %>% 
-  arrange(inc_rank) %>%
-  ggplot(aes(x = group, y = percent, group = group, fill = inc_band_group, 
-               label = text)) +
-  geom_bar(stat = "identity", color = "white") + 
-  geom_text(size = 3, position = position_stack(vjust = 0.5)) +
-  scale_fill_manual(values = faminc_pal) +
-  scale_x_discrete(name = "") +
-  scale_y_continuous(labels = label_percent(scale = 1),
-                     name = "") +
-  guides(fill = guide_legend(reverse = TRUE)) +
-  coord_flip() + 
-  labs(title = faminc_title, 
-       subtitle = unique(faminc_grn$locality_label),
-       caption = source_acs) +
-  theme_minimal() +
-  theme(legend.title=element_blank(),
-        legend.position = "top",
-        legend.location = "plot",
-        legend.justification="center",
-          panel.grid.major.x = element_blank(),
-          axis.ticks = element_blank(),
-          panel.grid.minor = element_blank(),
-          plot.title.position= "plot",
-          plot.caption.position = "plot")
+# # Income distribution by race/ethnicity by county ----
+# faminc_grn <- faminc_data %>% 
+#   filter(locality == "Greene County, Virginia" & group != "Hispanic Families")
+# 
+# faminc_grn %>% 
+#   arrange(inc_rank) %>%
+#   ggplot(aes(x = group, y = percent, group = group, fill = inc_band_group, 
+#                label = text)) +
+#   geom_bar(stat = "identity", color = "white") + 
+#   geom_text(size = 3, position = position_stack(vjust = 0.5)) +
+#   scale_fill_manual(values = faminc_pal) +
+#   scale_x_discrete(name = "") +
+#   scale_y_continuous(labels = label_percent(scale = 1),
+#                      name = "") +
+#   guides(fill = guide_legend(reverse = TRUE)) +
+#   coord_flip() + 
+#   labs(title = faminc_title, 
+#        subtitle = unique(faminc_grn$locality_label),
+#        caption = source_acs) +
+#   theme_minimal() +
+#   theme(legend.title=element_blank(),
+#         legend.position = "top",
+#         legend.location = "plot",
+#         legend.justification="center",
+#           panel.grid.major.x = element_blank(),
+#           axis.ticks = element_blank(),
+#           panel.grid.minor = element_blank(),
+#           plot.title.position= "plot",
+#           plot.caption.position = "plot")
 
 ```
 
@@ -1000,11 +1219,23 @@ greene_ssw_map <- ssw_tract %>%
   theme_map()+
   theme(legend.position="right")
 
-greene_inc_map + greene_ssw_map
+greene_inc_map
+
+greene_ssw_map
 ```
 
 ## Louisa County
-```{r}
+```{r, echo=FALSE}
+# Set name
+local_name <- "Louisa County"
+
+<<locality_summary>>
+
+```
+
+`r section_summary`
+
+```{r ssw_table_lou}
 # County self sufficiency table ----
 selfsuff_table_lou <- selfsuff_table %>% 
   filter(county == "Louisa County")
@@ -1078,35 +1309,35 @@ fam_ssw_lou %>%
 ```
 
 ```{r, echo=FALSE,fig.width=6.5, fig.height=4}
-# Income distribution by race/ethnicity by county ----
-faminc_lou <- faminc_data %>% 
-  filter(locality == "Louisa County, Virginia" & group != "Hispanic Families")
-
-faminc_lou %>% 
-  arrange(inc_rank) %>%
-  ggplot(aes(x = group, y = percent, group = group, fill = inc_band_group, 
-               label = text)) +
-  geom_bar(stat = "identity", color = "white") + 
-  geom_text(size = 3, position = position_stack(vjust = 0.5)) +
-  scale_fill_manual(values = faminc_pal) +
-  scale_x_discrete(name = "") +
-  scale_y_continuous(labels = label_percent(scale = 1),
-                     name = "") +
-  guides(fill = guide_legend(reverse = TRUE)) +
-  coord_flip() + 
-  labs(title = faminc_title, 
-       subtitle = unique(faminc_lou$locality_label),
-       caption = source_acs) +
-  theme_minimal() +
-  theme(legend.title=element_blank(),
-        legend.position = "top",
-        legend.location = "plot",
-        legend.justification="center",
-          panel.grid.major.x = element_blank(),
-          axis.ticks = element_blank(),
-          panel.grid.minor = element_blank(),
-          plot.title.position= "plot",
-          plot.caption.position = "plot")
+# # Income distribution by race/ethnicity by county ----
+# faminc_lou <- faminc_data %>% 
+#   filter(locality == "Louisa County, Virginia" & group != "Hispanic Families")
+# 
+# faminc_lou %>% 
+#   arrange(inc_rank) %>%
+#   ggplot(aes(x = group, y = percent, group = group, fill = inc_band_group, 
+#                label = text)) +
+#   geom_bar(stat = "identity", color = "white") + 
+#   geom_text(size = 3, position = position_stack(vjust = 0.5)) +
+#   scale_fill_manual(values = faminc_pal) +
+#   scale_x_discrete(name = "") +
+#   scale_y_continuous(labels = label_percent(scale = 1),
+#                      name = "") +
+#   guides(fill = guide_legend(reverse = TRUE)) +
+#   coord_flip() + 
+#   labs(title = faminc_title, 
+#        subtitle = unique(faminc_lou$locality_label),
+#        caption = source_acs) +
+#   theme_minimal() +
+#   theme(legend.title=element_blank(),
+#         legend.position = "top",
+#         legend.location = "plot",
+#         legend.justification="center",
+#           panel.grid.major.x = element_blank(),
+#           axis.ticks = element_blank(),
+#           panel.grid.minor = element_blank(),
+#           plot.title.position= "plot",
+#           plot.caption.position = "plot")
 
 ```
 
@@ -1166,11 +1397,23 @@ louisa_ssw_map <- ssw_tract %>%
   theme_map()+
   theme(legend.position="right")
 
-louisa_inc_map + louisa_ssw_map
+louisa_inc_map 
+
+louisa_ssw_map
 ```
 
 ## Nelson County
-```{r}
+```{r, echo=FALSE}
+# Set name
+local_name <- "Nelson County"
+
+<<locality_summary>>
+
+```
+
+`r section_summary`
+
+```{r ssw_table_nel}
 # County self sufficiency table ----
 selfsuff_table_nel <- selfsuff_table %>% 
   filter(county == "Nelson County")
@@ -1244,35 +1487,35 @@ fam_ssw_nel %>%
 ```
 
 ```{r, echo=FALSE,fig.width=6.5, fig.height=4}
-# Income distribution by race/ethnicity by county ----
-faminc_nel <- faminc_data %>% 
-  filter(locality == "Nelson County, Virginia" & group != "Hispanic Families")
-
-faminc_nel %>% 
-  arrange(inc_rank) %>%
-  ggplot(aes(x = group, y = percent, group = group, fill = inc_band_group, 
-               label = text)) +
-  geom_bar(stat = "identity", color = "white") + 
-  geom_text(size = 3, position = position_stack(vjust = 0.5)) +
-  scale_fill_manual(values = faminc_pal) +
-  scale_x_discrete(name = "") +
-  scale_y_continuous(labels = label_percent(scale = 1),
-                     name = "") +
-  guides(fill = guide_legend(reverse = TRUE)) +
-  coord_flip() + 
-  labs(title = faminc_title, 
-       subtitle = unique(faminc_nel$locality_label),
-       caption = source_acs) +
-  theme_minimal() +
-  theme(legend.title=element_blank(),
-        legend.position = "top",
-        legend.location = "plot",
-        legend.justification="center",
-          panel.grid.major.x = element_blank(),
-          axis.ticks = element_blank(),
-          panel.grid.minor = element_blank(),
-          plot.title.position= "plot",
-          plot.caption.position = "plot")
+# # Income distribution by race/ethnicity by county ----
+# faminc_nel <- faminc_data %>% 
+#   filter(locality == "Nelson County, Virginia" & group != "Hispanic Families")
+# 
+# faminc_nel %>% 
+#   arrange(inc_rank) %>%
+#   ggplot(aes(x = group, y = percent, group = group, fill = inc_band_group, 
+#                label = text)) +
+#   geom_bar(stat = "identity", color = "white") + 
+#   geom_text(size = 3, position = position_stack(vjust = 0.5)) +
+#   scale_fill_manual(values = faminc_pal) +
+#   scale_x_discrete(name = "") +
+#   scale_y_continuous(labels = label_percent(scale = 1),
+#                      name = "") +
+#   guides(fill = guide_legend(reverse = TRUE)) +
+#   coord_flip() + 
+#   labs(title = faminc_title, 
+#        subtitle = unique(faminc_nel$locality_label),
+#        caption = source_acs) +
+#   theme_minimal() +
+#   theme(legend.title=element_blank(),
+#         legend.position = "top",
+#         legend.location = "plot",
+#         legend.justification="center",
+#           panel.grid.major.x = element_blank(),
+#           axis.ticks = element_blank(),
+#           panel.grid.minor = element_blank(),
+#           plot.title.position= "plot",
+#           plot.caption.position = "plot")
 
 ```
 
@@ -1332,5 +1575,7 @@ nels_ssw_map <- ssw_tract %>%
   theme_map()+
   theme(legend.position="right")
 
-nels_inc_map + nels_ssw_map
+nels_inc_map
+
+nels_ssw_map
 ```
